--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container">
           <div class="group-infos">
             <div class="image-and-link">
-              <img src="assets/foto-perfil.png" alt="Foto de perfil da Anna Cláudia">
+              <img src="assets/photo.png" alt="Foto de perfil da Anna Cláudia">
               <p>@annaclaudia.dev</p>
             </div>
             <div class="principal-buttons">
